# looprpc/client.swagger.json
@@ -696,6 +696,43 @@
       "description": "- `unknown`: Unknown address type\n- `p2tr`: Pay to taproot pubkey (`TAPROOT_PUBKEY` = 1)",
       "title": "`AddressType` has to be one of:"
     },
+    "looprpcAssetDeposit": {
+      "type": "object",
+      "properties": {
+        "created_at": {
+          "type": "string",
+          "format": "int64"
+        },
+        "asset_id": {
+          "type": "string"
+        },
+        "amount": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "deposit_addr": {
+          "type": "string"
+        },
+        "state": {
+          "type": "string"
+        },
+        "csv_expiry": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "confirmation_height": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "expiry": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "anchor_outpoint": {
+          "type": "string"
+        }
+      }
+    },
     "looprpcAssetLoopOutInfo": {
       "type": "object",
       "properties": {
@@ -829,6 +866,9 @@
           "description": "The expiry of the reservation."
         }
       }
+    },
+    "looprpcCoSignAssetDepositHTLCResponse": {
+      "type": "object"
     },
     "looprpcDeposit": {
       "type": "object",
@@ -1344,6 +1384,18 @@
       ],
       "default": "UNKNOWN"
     },
+    "looprpcListAssetDepositsResponse": {
+      "type": "object",
+      "properties": {
+        "filtered_deposits": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/looprpcAssetDeposit"
+          },
+          "description": "A list of all deposits that match the filtered state."
+        }
+      }
+    },
     "looprpcListInstantOutsResponse": {
       "type": "object",
       "properties": {
@@ -1651,6 +1703,14 @@
         }
       }
     },
+    "looprpcNewAssetDepositResponse": {
+      "type": "object",
+      "properties": {
+        "deposit_id": {
+          "type": "string"
+        }
+      }
+    },
     "looprpcNewStaticAddressResponse": {
       "type": "object",
       "properties": {
@@ -1749,6 +1809,9 @@
       }
     },
     "looprpcProbeResponse": {
+      "type": "object"
+    },
+    "looprpcRevealAssetDepositKeyResponse": {
       "type": "object"
     },
     "looprpcRouteHint": {
